2008-08-06  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* Harness.java (parseTags): Close files after parsing.

2008-07-30  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* gnu/testlet/java/lang/Process/destroy.java: New test.
	* gnu/testlet/java/lang/Process/destroy_child.java: New file.

2008-07-24  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/awt/Desktop/PR34580.java:
	Assign class to correct package.
	
2008-07-24  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/awt/Desktop/PR34580.java:
	Fix compilation errors.
	* gnu/testlet/java/util/Currency/Taiwan.java:
	Update number of fraction digits to match CLDR.
	
2008-07-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/text/DateFormatSymbols/PR22851.java,
	* gnu/testlet/java/util/TimeZone/GetDisplayName.java:
	Add tests raised by issues in PR22851.
	
2008-07-01  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* gnu/testlet/java/lang/Integer/Tests15.java: New file.

2008-06-25  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* Harness.java (compileStringBase): Set target directory to build
	directory.
	(stripSourcePath): New method.
	(testNeedsToBeCompiled): Likewise.
	(parseTags): Likewise.
	(processUsesTag): Likewise.
	(processFilesTag): Likewise.
	(copyFiles): Likewise.
	(processSingleTest): Removed a lot of stuff now in the new methods
	above.
	(processFolder): Likewise.
	(compileFolder): Removed.
	(runFolder): Pass test in a LinkedHashSet.
	(compileTest): Removed.
	(compileFiles): New method.
	* Makefile.am (harness_files): Prefixed with $(srcdir).
	(harness): Added -d .
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* configure.in (BUILDDIR): Added.
	* gnu/testlet/TestHarness.java (getBuildDirectory): New method.
	* gnu/testlet/TestReport.java (writeXml): Restart the timer after
	each write as this could cause problems on faulty NFS.