@@ -1,0 +1,55 @@
+// Tags: JDK1.2
+
+// Copyright (C) 2008 Andrew John Hughes <gnu_andrew@member.fsf.org>
+
+// This file is part of Mauve.
+
+// Mauve is free software; you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation; either version 2, or (at your option)
+// any later version. 
+
+// Mauve is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License
+// along with Mauve; see the file COPYING.  If not, write to
+// the Free Software Foundation, 59 Temple Place - Suite 330,
+// Boston, MA 02111-1307, USA.  */
+
+package gnu.testlet.java.text.NumberFormat;
+
+import gnu.testlet.TestHarness;
+import gnu.testlet.Testlet;
+
+import java.text.NumberFormat;
+
+import java.util.Currency;
+import java.util.Locale;
+
+/*
+ * This test is based on PR31895, where changing the currency
+ * used by a currency instance of NumberFormat failed to have
+ * an effect on the output.
+ *
+ * @author Andrew John Hughes (gnu_andrew@member.fsf.org)
+ */
+public class PR31895
+  implements Testlet
+{
+
+  public void test(TestHarness harness)
+  {
+    NumberFormat nf = NumberFormat.getCurrencyInstance(Locale.UK);
+    Currency cur = Currency.getInstance(Locale.UK);
+    harness.check(nf.format(2.50).startsWith(cur.getSymbol()),
+		  nf.format(2.50) + " begins with " + cur.getSymbol());
+    Currency newCur = Currency.getInstance("EUR");
+    nf.setCurrency(newCur);
+    harness.check(nf.format(2.50).startsWith(newCur.getSymbol()),
+		  nf.format(2.50) + " begins with " + newCur.getSymbol());
+  }
+}
+
