@@ -1,3 +1,8 @@
+2008-08-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* gnu/testlet/java/text/NumberFormat/PR31895.java:
+	New test.
+	
 2008-08-06  Christian Thalinger  <twisti@complang.tuwien.ac.at>
 
 	* Harness.java (parseTags): Close files after parsing.
